<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40sp"
    android:layout_marginRight="40sp">

    <LinearLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="28dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textFontWeight="700"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/login_header"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ipt_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header"
        android:orientation="vertical">
        <EditText
            android:id="@+id/ipt_account"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/ipt_account"/>
        <EditText
            android:id="@+id/ipt_pwd"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/ipt_pwd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ipt_box"
        android:layout_marginTop="20sp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:text="@string/btn_login"
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_marginBottom="2sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_home"
            android:textAllCaps="false"
            android:text="@string/btn_home"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>