<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:text="@string/nav"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#01a5da"
            android:layout_above="@+id/bottom_bar">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:baselineAligned="false"
            android:id="@+id/bottom_bar"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="#f2f2f8">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/icon1"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/home"
                    android:gravity="center_horizontal"
                    android:id="@+id/icon1_text"
                    android:textColor="#000000"
                    android:textSize="15sp"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/icon1_img"
                    android:contentDescription="@string/img"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_marginTop="3dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/icon2"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:id="@+id/icon2_text"
                    android:text="@string/frag_list"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_marginTop="3dp"
                    android:id="@+id/icon2_img"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_alignParentBottom="true"
                    android:text="@string/frag_user"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="3dp"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>